--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,9 @@
 {
-  "extends": ["stylelint-config-standard","stylelint-config-css-modules","stylelint-config-recess-order"]
-  
+  "extends": ["stylelint-config-standard","stylelint-config-css-modules","stylelint-config-recess-order"],
+  "ignoreFiles": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
