--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/recoil": "^0.0.1",
     "classnames": "^2.2.6",
     "dexie": "^3.0.3",
+    "js-cookie": "^2.2.1",
     "lodash-es": "^4.17.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -57,6 +58,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
